--- a/styles/globals.less
+++ b/styles/globals.less
@@ -15,13 +15,18 @@ a {
 }
 
 .ant-layout-content {
-    max-width: 867px;
+    max-width: 678px;
     margin: auto;
-    min-height: 380px;
+    min-height: calc(100vh - 80px) !important;
     margin-top: 80px;
 }
 @media only screen and (max-width: 867px) {
     .ant-layout-content {
         padding: 10px;
+    }
+}
+.easyimage.easyimage-full {
+    img {
+        width: 100% !important;
     }
 }
