--- a/styles/antd.less
+++ b/styles/antd.less
@@ -17,3 +17,12 @@
 @border-radius-base: 2px; // major border radius
 @border-color-base: #d9d9d9; // major border color
 @box-shadow-base: 0 3px 6px -4px rgba(0, 0, 0, 0.12), 0 6px 16px 0 rgba(0, 0, 0, 0.08), 0 9px 28px 8px rgba(0, 0, 0, 0.05); // major shadow for layers
+.header {
+    @media (max-width: 991px) {
+        padding: 0 25px;
+    }
+    .ant-menu-horizontal {
+        background-color: transparent;
+        color: white;
+    }
+}
